--- a/my-project2/frontend/package.json
+++ b/my-project2/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@angular/service-worker": "^15.1.0",
     "@ionic/storage-angular": "^3.0.6",
     "bootstrap": "^5.3.1",
     "hammerjs": "^2.0.8",
