--- a/my-project2/frontend/package.json
+++ b/my-project2/frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^15.1.0",
     "@angular/service-worker": "^15.1.0",
     "@ionic/storage-angular": "^3.0.6",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.1",
     "file-saver": "^2.0.5",
     "hammerjs": "^2.0.8",
